RMI server
Former-commit-id: adc476c70a2556bdf73dc9b69e9ef23d13fc1e4c